cmake_minimum_required(VERSION 3.20)
project(Leetcode_22)

set(CMAKE_CXX_STANDARD 11)

add_executable(Leetcode_34 Double_Pointer/34_find_first_and_last.cpp)
add_executable(Leetcode_704 Binary_Search/704_binary_search.cpp)
add_executable(Leetcode_35 Binary_Search/35_search_insertion_pos.cpp)
add_executable(Leetcode_104 Binary_Tree/104_Maximum_Depth_BT.cpp)
add_executable(Leetcode_105 Binary_Tree/105_Construct_BT_from_Preorder_Inorder.cpp)
add_executable(Leetcode_106 Binary_Tree/106_Construct_BT_Inorder_Postorder.cpp)
add_executable(Leetcode_72 Dynamic_Programming/72_Edit_Distance.cpp)
add_executable(Leetcode_200 Search/200_num_of_islands.cpp)
add_executable(Leetcode_146 DataStructure/146_LRU.cpp)
add_executable(Leetcode_460 DataStructure/460_LFU.cpp)
add_executable(Leetcode_20 DataStructure/20_Valid_Parentheses.cpp)
add_executable(Leetcode_921 DataStructure/921_min_add_valid_parens.cpp)
add_executable(Leetcode_70 Dynamic_Programming/70_Climbing_Stairs.cpp)
add_executable(FSA Drafts/Format_String_Attack.cpp)
add_executable(Leetcode_322 Dynamic_Programming/322_Coin_Change.cpp)
add_executable(Leetcode_300 Dynamic_Programming/300_Longest_Increasing_Subseq.cpp)
add_executable(Leetcode_53 Dynamic_Programming/53_Maximum_Subarray.cpp)
add_executable(Leetcode_354 Dynamic_Programming/354_Russian_Doll_Envelopes.cpp)
add_executable(Hexadecimal_Test Drafts/Hex_Test.cpp)
add_executable(Control_Hijack Drafts/control_hijack.c)
add_executable(Jump_Game Dynamic_Programming/55_Jump_Game.cpp)
add_executable(Jump_Game_II Dynamic_Programming/45_Jump_Game_II.cpp)
add_executable(House_Robber Dynamic_Programming/198_House_Robber.cpp)
add_executable(House_Robber_II Dynamic_Programming/213_House_Robber_II.cpp)
add_executable(House_Robber_III Dynamic_Programming/337_House_Robber_III.cpp)
add_executable(Min_Path_Sum Dynamic_Programming/64_Min_Path_Sum.cpp)
add_executable(Unique_Path Dynamic_Programming/62_Unique_Paths.cpp)
add_executable(Min_Falling_Path_Sum Dynamic_Programming/931_Min_Falling_Path_Sum.cpp)
add_executable(Min_Depth_BT Binary_Tree/111_Min_Depth_BT.cpp)
add_executable(Open_Lock Search/752_Open_the_Lock.cpp)
add_executable(Sliding_Puzzle Search/773_Sliding_Puzzle.cpp)
add_executable(Num_Closed_Islands Search/1254_Num_Closed_Islands.cpp)
add_executable(Surrounded_Regions Search/130_Surrounded_Regions.cpp)
add_executable(All_Paths_Src_Tgt Graph/797_All_Paths_src_to_tar.cpp)
add_executable(Is_Bipartite Graph/785_Is_Bipartite.cpp)
add_executable(Possible_Bipartition Graph/886_Possible_Bipartition.cpp)
add_executable(Trapping_Rain Double_Pointer/42_Trapping_Rain_Water.cpp)
add_executable(Interval_List_Intersection Double_Pointer/986_Interval_List_Intersection.cpp)
add_executable(Remove_Covered_Interval Double_Pointer/1288_Remove_Covered_Interval.cpp)
add_executable(Merge_Intervals Double_Pointer/56_Merge_Intervals.cpp)
add_executable(Duplicate_Subtree Binary_Tree/652_Duplicate_Subtree.cpp)
add_executable(297 Binary_Tree/297_Serialize_and_Deserialize_BT.cpp)
add_executable(Conversion Drafts/String_Int_Conversion.cpp)
add_executable(draft Drafts/draft.cpp)
add_executable(HJ29 String/HJ29_Encode_Decode_String.cpp)
add_executable(HJ_MSD DataStructure/HJ_Maximum_Social_Distance.cpp)
add_executable(207 Graph/207_Course_Schedule.cpp)
add_executable(210 Graph/210_Course_Schedule_II.cpp)
add_executable(22 Backtracking/22_Generate_Parenthesis.cpp)
add_executable(25 DataStructure/25_Reverse_Nodes_in_K_Group.cpp)
add_executable(1 Double_Pointer/1_Two_Sum.cpp)
add_executable(15 Double_Pointer/15_3Sum.cpp)
add_executable(UF Graph/Union_Find.cpp)
add_executable(416 Dynamic_Programming/416_Partition_Equal_Subset_Sum.cpp)
add_executable(Q1 Huawei/Q1_note.cpp)
add_executable(Q2 Huawei/Q2_note.cpp)
add_executable(Q3 Huawei/Q3_note.cpp)
add_executable(234 DataStructure/234_Palindrome_Linked_List.cpp)
add_executable(21 DataStructure/21_Merge_2_Sorted_Lists.cpp)
add_executable(23 DataStructure/23_Merge_K_Sorted_Lists.cpp)
add_executable(141 DataStructure/141_Linked_List_Cycle.cpp)
add_executable(142 DataStructure/142_Linked_List_Cycle_II.cpp)
add_executable(160 DataStructure/160_Intersection_of_2_Linked_Lists.cpp)
add_executable(538 Binary_Tree/538_BST_to_Greater_Tree.cpp)
add_executable(51 Backtracking/51_N_Queens.cpp)
add_executable(121 Dynamic_Programming/121_Best_Time_Stock.cpp)
add_executable(122 Dynamic_Programming/122_Best_Time_Stock_II.cpp)
add_executable(123 Dynamic_Programming/123_Best_Time_Stock_III.cpp)
add_executable(188 Dynamic_Programming/188_Best_Time_Stock_IV.cpp)
add_executable(309 Dynamic_Programming/309_Best_Time_Stock_Cooldown.cpp)
add_executable(714 Dynamic_Programming/714_Best_Time_Stock_Fee.cpp)
add_executable(897 Binary_Tree/897_Increasing_Order_Search_Tree.cpp)
add_executable(174 Dynamic_Programming/174_Dungeon_game.cpp)
add_executable(312 Dynamic_Programming/312_Burst_Ballons.cpp)
add_executable(230 Binary_Tree/230_Kth_Smallest_BST.cpp)
add_executable(3 Double_Pointer/3_Longest_non_repeat_Substring.cpp)
add_executable(76 Double_Pointer/76_Min_Window_Substring.cpp)
add_executable(567 Double_Pointer/567_Permutation_in_string.cpp)
add_executable(438 Double_Pointer/438_Find_all_Anagrams_in_String.cpp)
add_executable(241 Backtracking/241_Different_Ways_Parenthesis.cpp)

